# Checkmeg

./: .gitignore  CMakeLists.txt  README.md  bookmarks.json  build.ps1  make-icon.ps1  package.ps1  release.ps1
docs/: index.html  style.css
package/: README.md
src/: Bookmark.h  SensitiveCrypto.h  SupabaseAuth.cpp  SupabaseAuth.h  SupabaseBookmarks.h  SupabaseConfig.example.h  Updater.h  Version.h  main.cpp  resource.h  resource.rc
supabase/: 2025-12-22_add_sensitive_fields.sql  bookmarks_schema.sql
